Added logging and changed worker object

--- a/notebooks/abyss_request_testing.ipynb
+++ b/notebooks/abyss_request_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 121,
    "id": "fatty-fetish",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 122,
    "id": "incident-crime",
    "metadata": {},
    "outputs": [
@@ -24,10 +24,10 @@
      "output_type": "stream",
      "text": [
       "Please paste the following URL in a browser:\n",
-      "https://auth.globus.org/v2/oauth2/authorize?client_id=7414f0b4-7d05-4bb6-bb00-076fa3f17cf5&redirect_uri=https%3A%2F%2Fauth.globus.org%2Fv2%2Fweb%2Fauth-code&scope=urn%3Aglobus%3Aauth%3Ascope%3Atransfer.api.globus.org%3Aall+https%3A%2F%2Fauth.globus.org%2Fscopes%2Ffacd7ccc-c5f4-42aa-916b-a0e270e2c2a9%2Fall+email+openid&state=_default&response_type=code&code_challenge=JB-Q9sACIVKJMuWY7tS1wT6gkoE0g3c-YMeEIHsCQWI&code_challenge_method=S256&access_type=online&prefill_named_grant=My+App+Login\n",
+      "https://auth.globus.org/v2/oauth2/authorize?client_id=7414f0b4-7d05-4bb6-bb00-076fa3f17cf5&redirect_uri=https%3A%2F%2Fauth.globus.org%2Fv2%2Fweb%2Fauth-code&scope=urn%3Aglobus%3Aauth%3Ascope%3Atransfer.api.globus.org%3Aall+https%3A%2F%2Fauth.globus.org%2Fscopes%2Ffacd7ccc-c5f4-42aa-916b-a0e270e2c2a9%2Fall+email+openid&state=_default&response_type=code&code_challenge=IGaMiOI3vAzm9wrwni2lcRT939meEW1fRLHH8WDenLk&code_challenge_method=S256&access_type=online&prefill_named_grant=My+App+Login\n",
       "Please Paste your Auth Code Below: \n",
-      "dTmnmg2wzBIntHkNx4pvMLQrSxu19p\n",
-      "Headers: {'Authorization': 'Bearer AgVgyazW415vKE5gw6aoP2DpGgYv6MaYedjDm3lMeWDdYnxj7MubCNoOnN9DD6k7NQqbMD3G7kd9wDclVwemQhpDqQ', 'Transfer': 'AgNaM1MmqMO42VBdNroYVojP2XEyQMwDvWezM81z58WDz68kOvtgCGbGa51rxpQ4OwVJqVqxPPXaD4IjydBK7TM5e9', 'FuncX': 'AgVgyazW415vKE5gw6aoP2DpGgYv6MaYedjDm3lMeWDdYnxj7MubCNoOnN9DD6k7NQqbMD3G7kd9wDclVwemQhpDqQ'}\n"
+      "C4eKEUg5PSxJFQyv00Br3gdro9f15v\n",
+      "Headers: {'Authorization': 'Bearer AgNDopY7y6Bbe2v1NbYpmaE9NKWxe4EYrWjGJVQ1lrBoEjKxrrFgClxoePKPNPoxB7eM0KWo5Pr6VXhjyxnlmfM5ol', 'Transfer': 'AggDEkwxbbkl979MdDm4DWo6V1j5rgypbXP4MqrJGaVNbvevKVFJCb2Y7JBbDW7XbPl7J2ygP8ENK5H1wyzQBtl8gP', 'FuncX': 'AgNDopY7y6Bbe2v1NbYpmaE9NKWxe4EYrWjGJVQ1lrBoEjKxrrFgClxoePKPNPoxB7eM0KWo5Pr6VXhjyxnlmfM5ol'}\n"
      ]
     }
    ],
@@ -79,96 +79,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 227,
    "id": "innovative-tuning",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please paste the following URL in a browser:\n",
+      "https://auth.globus.org/v2/oauth2/authorize?client_id=4cf29807-cf21-49ec-9443-ff9a3fb9f81c&redirect_uri=https%3A%2F%2Fauth.globus.org%2Fv2%2Fweb%2Fauth-code&scope=https%3A%2F%2Fauth.globus.org%2Fscopes%2Ffacd7ccc-c5f4-42aa-916b-a0e270e2c2a9%2Fall+urn%3Aglobus%3Aauth%3Ascope%3Asearch.api.globus.org%3Aall+openid&state=_default&response_type=code&code_challenge=HZeBVZYKzs89bLhfZc_1qDU3lw5953CemIP1OX2A3Jk&code_challenge_method=S256&access_type=offline&prefill_named_grant=FuncX+SDK+Login\n",
+      "Please Paste your Auth Code Below: \n",
+      "nJB0p6aU7d3EYAER2KzPJXDOo9s3ct\n"
+     ]
+    }
+   ],
    "source": [
     "fxc = funcx.FuncXClient()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "id": "qualified-treatment",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "container_uuid = fxc.register_container(\"/home/tskluzac/globus-crawler.sif\",\n",
+    "                                       \"singularity\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "refined-baseline",
+   "execution_count": 234,
+   "id": "subject-footwear",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fdfbbe34-2499-428f-a541-227ca935fb08\n"
+      "300badb7-5b14-4ec1-a517-7ae452411ea3\n"
      ]
     }
    ],
    "source": [
-    "def hello_world():\n",
-    "    import time\n",
-    "    time.sleep(100)\n",
-    "    raise NotImplementedError\n",
-    "    return \"Hello World!\"\n",
+    "print(container_uuid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "significant-myrtle",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23ace792-64ae-484e-89be-3e4c9cbfc5ba\n"
+     ]
+    }
+   ],
+   "source": [
+    "def run_crawler(transfer_token, base_path, globus_eid, grouper_name,\n",
+    "                max_crawl_threads=2, max_push_threads=4):\n",
+    "    import os\n",
+    "    import sys\n",
+    "    sys.path.append(os.path.dirname(os.path.dirname(os.path.dirname(os.path.dirname(os.path.abspath(__file__))))))\n",
+    "    return sys.path\n",
+    "    from abyss.crawlers.globus_crawler.globus_crawler import GlobusCrawler\n",
+    "    from abyss.crawlers.utils.sqs_utils import create_sqs_connection\n",
     "\n",
-    "func_uuid = fxc.register_function(hello_world)\n",
+    "    crawler = GlobusCrawler(transfer_token,\n",
+    "                            globus_eid,\n",
+    "                            base_path,\n",
+    "                            grouper_name,\n",
+    "                            None,\n",
+    "                            create_sqs_connection(os.environ.get(\"AWS_ACCESS\"),\n",
+    "                                                  os.environ.get(\"AWS_SECRET\"),\n",
+    "                                                  region_name=\"us-east-1\"),\n",
+    "                            max_crawl_threads=max_crawl_threads,\n",
+    "                            max_push_threads=max_push_threads)\n",
+    "    return crawler.crawl(blocking=True)\n",
+    "func_uuid = fxc.register_function(run_crawler, container_uuid=container_uuid)\n",
     "print(func_uuid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "congressional-pizza",
+   "execution_count": 235,
+   "id": "outer-element",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24f47162-52bf-47c6-ad10-37e47c55a0d2\n"
+      "32f8b7b7-2fa8-4450-8d4e-1b9e8876f7e7\n"
      ]
     }
    ],
    "source": [
-    "tutorial_endpoint = '4b116d3c-1703-4f8f-9f6f-39921e5864df' # Public tutorial endpoint\n",
-    "jetstream_endpoint = \"a592279e-45cc-427a-a679-6fd308aa9661\"\n",
-    "res = fxc.run(endpoint_id=jetstream_endpoint, function_id=func_uuid)\n",
-    "print(res)"
+    "def test():\n",
+    "    import os\n",
+    "    import sys\n",
+    "#     os.chdir(\"/abyss\")\n",
+    "    return os.listdir(\"/\")\n",
+    "\n",
+    "func_uuid = fxc.register_function(test, container_uuid=container_uuid)\n",
+    "print(func_uuid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 236,
+   "id": "consistent-bloom",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = fxc.run(endpoint_id=jetstream_endpoint, function_id=func_uuid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "bulgarian-cocktail",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = fxc.run(\"AggDEkwxbbkl979MdDm4DWo6V1j5rgypbXP4MqrJGaVNbvevKVFJCb2Y7JBbDW7XbPl7J2ygP8ENK5H1wyzQBtl8gP\",\n",
+    "              \"/Users/ryan/Documents/CS/abyss\",\n",
+    "                \"5ecf6444-affc-11e9-98d4-0a63aa6b37da\",\n",
+    "                \"\",\n",
+    "              endpoint_id=jetstream_endpoint, function_id=func_uuid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "congressional-pizza",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tutorial_endpoint = '4b116d3c-1703-4f8f-9f6f-39921e5864df' # Public tutorial endpoint\n",
+    "jetstream_endpoint = \"548073e0-ddc5-4d71-b7c3-184fdeb5b06d\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
    "id": "civilian-internet",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['partial', 'dev', 'boot', 'proc', 'var', 'vol_b', 'bin', 'initrd.img.old', 'media', 'mnt', 'snap', 'opt', 'lib', 'home', 'tmp', 'lost+found', 'run', 'project2', 'vmlinuz.old', 'sys', 'lib64', 'usr', 'root', 'initrd.img', 'sbin', 'vmlinuz', 'etc', 'srv']\n",
+      "['partial', 'dev', 'boot', 'proc', 'var', 'vol_b', 'bin', 'initrd.img.old', 'media', 'mnt', 'snap', 'opt', 'lib', 'home', 'tmp', 'lost+found', 'run', 'project2', 'vmlinuz.old', 'sys', 'lib64', 'usr', 'root', 'initrd.img', 'sbin', 'vmlinuz', 'etc', 'srv']\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-237-5d496e037f20>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfxc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/abyss/lib/python3.7/site-packages/funcx/sdk/client.py\u001b[0m in \u001b[0;36mget_result\u001b[0;34m(self, task_id)\u001b[0m\n\u001b[1;32m    223\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtask\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'pending'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 224\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtask\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'status'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    225\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: waiting-for-launch",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-237-5d496e037f20>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "while True:\n",
+    "    try:\n",
+    "        x = fxc.get_result(res)\n",
+    "        print(x)\n",
+    "        break\n",
+    "    except:\n",
+    "        print(x)\n",
+    "        time.sleep(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "necessary-engine",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "there\n"
+      "False\n"
      ]
     }
    ],
    "source": [
-    "try:\n",
-    "    x = fxc.get_result(res)\n",
-    "    print(x)\n",
-    "except NotImplementedError:\n",
-    "    print(\"here\")\n",
-    "except Exception:\n",
-    "    print(\"there\")"
+    "print(\"abyss\" in ['partial', 'dev', 'boot', 'proc', 'var', 'vol_b', 'bin', 'initrd.img.old', 'media', 'mnt', 'snap', 'opt', 'lib', 'home', 'tmp', 'lost+found', 'run', 'project2', 'vmlinuz.old', 'sys', 'lib64', 'usr', 'root', 'initrd.img', 'sbin', 'vmlinuz', 'etc', 'srv'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "necessary-engine",
+   "id": "automatic-jaguar",
    "metadata": {},
    "outputs": [],
    "source": []
