Added new repredictors after some more data analysis

--- a/notebooks/crawl_analysis.ipynb
+++ b/notebooks/crawl_analysis.ipynb
@@ -47,16 +47,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tar: \n",
-      "         size_bytes\n",
-      "count  1.600000e+01\n",
-      "mean   4.482301e+09\n",
-      "std    8.152891e+09\n",
-      "min    2.910800e+04\n",
-      "25%    4.274491e+08\n",
-      "50%    1.001690e+09\n",
-      "75%    1.453554e+09\n",
-      "max    2.102018e+10\n",
       "gz: \n",
       "         size_bytes\n",
       "count  3.300000e+01\n",
@@ -76,7 +66,17 @@
       "25%    5.159525e+06\n",
       "50%    2.541659e+07\n",
       "75%    1.542360e+08\n",
-      "max    4.280410e+11\n"
+      "max    4.280410e+11\n",
+      "tar: \n",
+      "         size_bytes\n",
+      "count  1.600000e+01\n",
+      "mean   4.482301e+09\n",
+      "std    8.152891e+09\n",
+      "min    2.910800e+04\n",
+      "25%    4.274491e+08\n",
+      "50%    1.001690e+09\n",
+      "75%    1.453554e+09\n",
+      "max    2.102018e+10\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc9219abbd0>"
+       "<matplotlib.legend.Legend at 0x7f9139946850>"
       ]
      },
      "execution_count": 5,
@@ -153,6 +153,26 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1475"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mdf_crawl_df.value_counts(subset=[\"extension\"], sort=True)[\"h5\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get compressed extensions\n",
@@ -161,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -170,16 +190,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tar: \n",
-      "         size_bytes\n",
-      "count  6.630000e+02\n",
-      "mean   2.025912e+07\n",
-      "std    1.783225e+06\n",
-      "min    6.635461e+06\n",
-      "25%    1.987813e+07\n",
-      "50%    1.987813e+07\n",
-      "75%    1.987967e+07\n",
-      "max    2.651643e+07\n",
       "gz: \n",
       "         size_bytes\n",
       "count  9.560000e+02\n",
@@ -190,6 +200,16 @@
       "50%    1.687658e+06\n",
       "75%    1.719673e+06\n",
       "max    5.265781e+09\n",
+      "tar: \n",
+      "         size_bytes\n",
+      "count  6.630000e+02\n",
+      "mean   2.025912e+07\n",
+      "std    1.783225e+06\n",
+      "min    6.635461e+06\n",
+      "25%    1.987813e+07\n",
+      "50%    1.987813e+07\n",
+      "75%    1.987967e+07\n",
+      "max    2.651643e+07\n",
       "zip: \n",
       "         size_bytes\n",
       "count  3.000000e+00\n",
@@ -265,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,23 +304,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tar: \n",
+      "zip: \n",
       "         size_bytes\n",
-      "count  1.090000e+02\n",
-      "mean   1.654566e+08\n",
-      "std    4.978121e+08\n",
-      "min    4.096000e+04\n",
-      "25%    8.519680e+06\n",
-      "50%    3.350528e+07\n",
-      "75%    4.936704e+07\n",
-      "max    2.879764e+09\n",
+      "count  1.066000e+03\n",
+      "mean   2.579681e+07\n",
+      "std    1.599344e+08\n",
+      "min    3.505000e+03\n",
+      "25%    5.485575e+04\n",
+      "50%    2.074130e+05\n",
+      "75%    1.167658e+06\n",
+      "max    1.835963e+09\n",
       "gz: \n",
       "         size_bytes\n",
       "count  6.310000e+02\n",
@@ -311,16 +331,16 @@
       "50%    4.115682e+06\n",
       "75%    9.351412e+06\n",
       "max    5.968358e+08\n",
-      "zip: \n",
+      "tar: \n",
       "         size_bytes\n",
-      "count  1.066000e+03\n",
-      "mean   2.579681e+07\n",
-      "std    1.599344e+08\n",
-      "min    3.505000e+03\n",
-      "25%    5.485575e+04\n",
-      "50%    2.074130e+05\n",
-      "75%    1.167658e+06\n",
-      "max    1.835963e+09\n"
+      "count  1.090000e+02\n",
+      "mean   1.654566e+08\n",
+      "std    4.978121e+08\n",
+      "min    4.096000e+04\n",
+      "25%    8.519680e+06\n",
+      "50%    3.350528e+07\n",
+      "75%    4.936704e+07\n",
+      "max    2.879764e+09\n"
      ]
     }
    ],
