--- a/notebooks/abyss_request_testing.ipynb
+++ b/notebooks/abyss_request_testing.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "incident-crime",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Headers: {'Authorization': 'Bearer Ag3yK3JY4bBqok5V2neQjW4yl1rzQmVGQobMakjJW8Neo1jg35uVC2g4oEnpklDzbgOK800axBr2nKtXQPz9GIwrJ8', 'Transfer': 'Ago2vz44pB9bm58XvwVVWvpv3QJxe3W35V9oN1oPgPyao5NwkoHgCybQd7NMemmEBgVxBn095J0grGCKqEop2f1605', 'FuncX': 'Ag3yK3JY4bBqok5V2neQjW4yl1rzQmVGQobMakjJW8Neo1jg35uVC2g4oEnpklDzbgOK800axBr2nKtXQPz9GIwrJ8'}\n"
+      "Please paste the following URL in a browser:\n",
+      "https://auth.globus.org/v2/oauth2/authorize?client_id=7414f0b4-7d05-4bb6-bb00-076fa3f17cf5&redirect_uri=https%3A%2F%2Fauth.globus.org%2Fv2%2Fweb%2Fauth-code&scope=urn%3Aglobus%3Aauth%3Ascope%3Atransfer.api.globus.org%3Aall+https%3A%2F%2Fauth.globus.org%2Fscopes%2Ffacd7ccc-c5f4-42aa-916b-a0e270e2c2a9%2Fall+email+openid&state=_default&response_type=code&code_challenge=wq2CtJFBQUBZGLoke9RNBIcpegtF6suQVKXWDQ0KpUw&code_challenge_method=S256&access_type=online&prefill_named_grant=My+App+Login\n",
+      "Please Paste your Auth Code Below: \n",
+      "GlfVBXVjf6qD5Bnaz0kvBcNGPIKYzX\n",
+      "Headers: {'Authorization': 'Bearer Ag284aMeelMldg2VWEjkO8Oqd9vBgK0v1e3DkJWnEVvW9kOOojFkCV2PPnxPXbB2QrY1EyG4YNle3GcmBVaEbIm5Dk', 'Transfer': 'AgNeK39eP7XYJB1qKyEE51x2GwryQnxBrlzVPzOQQVlDnlDrb9UgC1k4KD6B23bJk56p6nQ4jBjjoGCj3algpuM5e9', 'FuncX': 'Ag284aMeelMldg2VWEjkO8Oqd9vBgK0v1e3DkJWnEVvW9kOOojFkCV2PPnxPXbB2QrY1EyG4YNle3GcmBVaEbIm5Dk'}\n"
      ]
     }
    ],
@@ -44,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 35,
    "id": "attractive-proportion",
    "metadata": {},
    "outputs": [],
@@ -54,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 36,
    "id": "expanded-congress",
    "metadata": {},
    "outputs": [
@@ -96,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "id": "qualified-treatment",
    "metadata": {},
    "outputs": [],
@@ -107,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "id": "subject-footwear",
    "metadata": {},
    "outputs": [
@@ -115,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2f70cd18-2659-4a33-b256-035aecffb7d6\n"
+      "6daadc1b-c99b-47c4-b438-1fb6971f94ff\n"
      ]
     }
    ],
@@ -159,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "individual-desert",
+   "id": "favorite-dancing",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "aggressive-fruit",
+   "id": "fleet-showcase",
    "metadata": {},
    "outputs": [
     {
