--- a/notebooks/abyss_request_testing.ipynb
+++ b/notebooks/abyss_request_testing.ipynb
@@ -23,7 +23,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Headers: {'Authorization': 'Bearer AgpOlm8odvaWpDr1x5rwgV4a7wkoxwjWneoBeQkXxX2rd6wyPwTvCalOj2NYrgq51a25PKbww7dWgBSXnkg2vIpP1X', 'Transfer': 'Agjmv9P3083d8kne0oQ74086nbzXnjJYMN20q2870xGdKx41OBC9C12arY0EQxjqjyn92VawlN7W6MUpxmDvauw42d', 'FuncX': 'AgpOlm8odvaWpDr1x5rwgV4a7wkoxwjWneoBeQkXxX2rd6wyPwTvCalOj2NYrgq51a25PKbww7dWgBSXnkg2vIpP1X'}\n"
+      "Please paste the following URL in a browser:\n",
+      "https://auth.globus.org/v2/oauth2/authorize?client_id=7414f0b4-7d05-4bb6-bb00-076fa3f17cf5&redirect_uri=https%3A%2F%2Fauth.globus.org%2Fv2%2Fweb%2Fauth-code&scope=urn%3Aglobus%3Aauth%3Ascope%3Atransfer.api.globus.org%3Aall+https%3A%2F%2Fauth.globus.org%2Fscopes%2Ffacd7ccc-c5f4-42aa-916b-a0e270e2c2a9%2Fall+email+openid&state=_default&response_type=code&code_challenge=RMEdfOHpBEG0ZOKsgTBcHkkdVlUUX2BZ14BUjYOanZs&code_challenge_method=S256&access_type=online&prefill_named_grant=My+App+Login\n",
+      "Please Paste your Auth Code Below: \n",
+      "FimfNZatUbvuyLqx0RZzwGw2ZmzUKj\n",
+      "Headers: {'Authorization': 'Bearer Ag1rGY7aOMQdrw6rk0joxrbYE7pppgy58OMvl2mObxxBoVKoKJh2CG9ooQBPw6qgKV9GbaNGqJondOF4x4yOeCx9v0', 'Transfer': 'AgD0qVd6VaDl9oann25eEEpJbYp8GabxVjMemN64YM23QeNmGkiaC30aw1Y7yY5g5OkPV6d5oby5Oacw8wObkS6x8E', 'FuncX': 'Ag1rGY7aOMQdrw6rk0joxrbYE7pppgy58OMvl2mObxxBoVKoKJh2CG9ooQBPw6qgKV9GbaNGqJondOF4x4yOeCx9v0'}\n"
      ]
     }
    ],
