Intermediary push. Attempting to add logic to prefetch compressed files to workers and get decompressed size via file headers. Currently added logic for scheduling and prefetching. Oh how i wish for strucutral pattern matching and switch statements

--- a/notebooks/crawl_analysis.ipynb
+++ b/notebooks/crawl_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,65 +40,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gz: \n",
-      "         size_bytes\n",
-      "count  3.300000e+01\n",
-      "mean   2.128045e+10\n",
-      "std    3.965044e+10\n",
-      "min    1.806800e+04\n",
-      "25%    3.972696e+07\n",
-      "50%    9.708754e+08\n",
-      "75%    1.050042e+10\n",
-      "max    1.167499e+11\n",
       "zip: \n",
-      "         size_bytes\n",
-      "count  8.240000e+02\n",
-      "mean   3.516081e+09\n",
-      "std    2.539581e+10\n",
-      "min    4.451000e+03\n",
-      "25%    5.159525e+06\n",
-      "50%    2.541659e+07\n",
-      "75%    1.542360e+08\n",
-      "max    4.280410e+11\n",
+      "2897250371840\n",
+      "gz: \n",
+      "702254764525\n",
       "tar: \n",
-      "         size_bytes\n",
-      "count  1.600000e+01\n",
-      "mean   4.482301e+09\n",
-      "std    8.152891e+09\n",
-      "min    2.910800e+04\n",
-      "25%    4.274491e+08\n",
-      "50%    1.001690e+09\n",
-      "75%    1.453554e+09\n",
-      "max    2.102018e+10\n"
+      "71716822812\n",
+      "3671221959177\n",
+      "873\n"
      ]
     }
    ],
    "source": [
     "# Get data on file size of each extension\n",
+    "size_sum = 0\n",
+    "total = 0\n",
     "for extension in compressed_extensions:\n",
     "    print(f\"{extension}: \")\n",
-    "    print(deep_blue_crawl_df[deep_blue_crawl_df.extension == extension].describe())"
+    "    print(sum(deep_blue_crawl_df[deep_blue_crawl_df.extension == extension].size_bytes))\n",
+    "    size_sum += sum(deep_blue_crawl_df[deep_blue_crawl_df.extension == extension].size_bytes)\n",
+    "    total += len(deep_blue_crawl_df[deep_blue_crawl_df.extension == extension])\n",
+    "print(size_sum)\n",
+    "print(total)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9139946850>"
+       "<matplotlib.legend.Legend at 0x7f931caab450>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -142,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +144,7 @@
        "1475"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -190,44 +174,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gz: \n",
-      "         size_bytes\n",
-      "count  9.560000e+02\n",
-      "mean   1.183636e+07\n",
-      "std    1.788227e+08\n",
-      "min    0.000000e+00\n",
-      "25%    1.609955e+06\n",
-      "50%    1.687658e+06\n",
-      "75%    1.719673e+06\n",
-      "max    5.265781e+09\n",
-      "tar: \n",
-      "         size_bytes\n",
-      "count  6.630000e+02\n",
-      "mean   2.025912e+07\n",
-      "std    1.783225e+06\n",
-      "min    6.635461e+06\n",
-      "25%    1.987813e+07\n",
-      "50%    1.987813e+07\n",
-      "75%    1.987967e+07\n",
-      "max    2.651643e+07\n",
       "zip: \n",
-      "         size_bytes\n",
-      "count  3.000000e+00\n",
-      "mean   4.921449e+07\n",
-      "std    8.516366e+07\n",
-      "min    4.973000e+03\n",
-      "25%    4.523350e+04\n",
-      "50%    8.549400e+04\n",
-      "75%    7.381925e+07\n",
-      "max    1.475530e+08\n"
+      "147643464\n",
+      "gz: \n",
+      "11315558276\n",
+      "tar: \n",
+      "13431794786\n",
+      "24894996526\n",
+      "1622\n"
      ]
     }
    ],
    "source": [
     "# Get data on file size of each extension\n",
+    "size_sum = 0\n",
+    "total = 0\n",
     "for extension in compressed_extensions:\n",
     "    print(f\"{extension}: \")\n",
-    "    print(mdf_crawl_df[mdf_crawl_df.extension == extension].describe())"
+    "    print(sum(mdf_crawl_df[mdf_crawl_df.extension == extension].size_bytes))\n",
+    "    size_sum += sum(mdf_crawl_df[mdf_crawl_df.extension == extension].size_bytes)\n",
+    "    total += len(mdf_crawl_df[mdf_crawl_df.extension == extension])\n",
+    "print(size_sum)\n",
+    "print(total)"
    ]
   },
   {
@@ -285,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,51 +272,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "zip: \n",
-      "         size_bytes\n",
-      "count  1.066000e+03\n",
-      "mean   2.579681e+07\n",
-      "std    1.599344e+08\n",
-      "min    3.505000e+03\n",
-      "25%    5.485575e+04\n",
-      "50%    2.074130e+05\n",
-      "75%    1.167658e+06\n",
-      "max    1.835963e+09\n",
       "gz: \n",
-      "         size_bytes\n",
-      "count  6.310000e+02\n",
-      "mean   2.465211e+07\n",
-      "std    7.082501e+07\n",
-      "min    3.569000e+03\n",
-      "25%    1.525705e+06\n",
-      "50%    4.115682e+06\n",
-      "75%    9.351412e+06\n",
-      "max    5.968358e+08\n",
+      "15555483048\n",
       "tar: \n",
-      "         size_bytes\n",
-      "count  1.090000e+02\n",
-      "mean   1.654566e+08\n",
-      "std    4.978121e+08\n",
-      "min    4.096000e+04\n",
-      "25%    8.519680e+06\n",
-      "50%    3.350528e+07\n",
-      "75%    4.936704e+07\n",
-      "max    2.879764e+09\n"
+      "18034766848\n",
+      "zip: \n",
+      "27499396815\n",
+      "61089646711\n",
+      "1806\n"
      ]
     }
    ],
    "source": [
     "# Get data on file size of each extension\n",
+    "size_sum = 0\n",
+    "total = 0\n",
     "for extension in compressed_extensions:\n",
     "    print(f\"{extension}: \")\n",
-    "    print(cdiac_crawl_df[cdiac_crawl_df.extension == extension].describe())"
+    "    print(sum(cdiac_crawl_df[cdiac_crawl_df.extension == extension].size_bytes))\n",
+    "    size_sum += sum(cdiac_crawl_df[cdiac_crawl_df.extension == extension].size_bytes)\n",
+    "    total += len(cdiac_crawl_df[cdiac_crawl_df.extension == extension])\n",
+    "print(size_sum)\n",
+    "print(total)"
    ]
   },
   {
