--- a/notebooks/decompression_analysis.ipynb
+++ b/notebooks/decompression_analysis.ipynb
@@ -97,6 +97,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "general-friday",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                              file_name  compressed_size  \\\n",
+      "661   58ab2dab_Pacific_current_30arcsec_generic_set3...        334341837   \n",
+      "673   a1086e6f_Pacific_current_30arcsec_generic_set2...        610354706   \n",
+      "679   d872ee58_Pacific_current_30arcsec_generic_set1...        625760978   \n",
+      "680   081c6f5c_elev_global_current_30arcsec_generic.zip        765681794   \n",
+      "688   c009c985_NewWorld_current_30arcsec_generic_set...        413145453   \n",
+      "702   4db078b3_NewWorld_current_30arcsec_generic_set...        431375841   \n",
+      "707   eaee3452_global_current_30arcsec_generic_set3.zip        762039276   \n",
+      "711   2d1fdd89_Pacific_current_30arcsec_generic_set4...        810564350   \n",
+      "715   0060a953_NewWorld_current_30arcsec_generic_set...        557690241   \n",
+      "785                              a4b82c05_nlcd92arc.zip       1835962728   \n",
+      "888                              5278a22f_nlcd92img.zip       1280034084   \n",
+      "1120                               f405e5ab_glc2000.zip        108005044   \n",
+      "1258                             7acd7819_nlcd92arc.zip       1835962728   \n",
+      "1301                               9452097e_glc2000.zip        108005044   \n",
+      "1415                                  42535096_code.zip         82582818   \n",
+      "1426                             ae25bcda_nlcd92img.zip       1280034084   \n",
+      "1480                                  3d06b6a7_code.zip         82582818   \n",
+      "1505                             3d6eb028_nlcd92arc.zip       1835962728   \n",
+      "1522                           a598b50c_nlcd2001img.zip       1260703130   \n",
+      "1557                             3c581bc0_nlcd92img.zip       1280034084   \n",
+      "1590                             7bfd7ea3_nlcd92arc.zip       1835962728   \n",
+      "1611                             7203e586_nlcd92img.zip       1280034084   \n",
+      "1670                           789889d9_nlcd2001img.zip       1260703130   \n",
+      "\n",
+      "      decompressed_size  estimated_value  compression_type  \\\n",
+      "661          4810466412       4810466412                 8   \n",
+      "673          5612210408       5612210408                 8   \n",
+      "679          6413954404       6413954404                 8   \n",
+      "680          6220801204       6220801204                 8   \n",
+      "688          4841139788       4841139788                 8   \n",
+      "702          5532730844       5532730844                 8   \n",
+      "707          9331202404       9331202404                 8   \n",
+      "711          6413954404       6413954404                 8   \n",
+      "715          5532730840       5532730840                 8   \n",
+      "785          4887472120       4887472120                 8   \n",
+      "888         14971663200      14971663200                 8   \n",
+      "1120         9494686933       9494686933                 8   \n",
+      "1258         4887472120       4887472120                 8   \n",
+      "1301         9494686933       9494686933                 8   \n",
+      "1415        11707094230      11707094230                 8   \n",
+      "1426        14971663200      14971663200                 8   \n",
+      "1480        11707094230      11707094230                 8   \n",
+      "1505         4887472120       4887472120                 8   \n",
+      "1522        30125820795      30125820795                 8   \n",
+      "1557        14971663200      14971663200                 8   \n",
+      "1590         4887472120       4887472120                 8   \n",
+      "1611        14971663200      14971663200                 8   \n",
+      "1670        30125820795      30125820795                 8   \n",
+      "\n",
+      "      decompression_time  estimation_time     origin  \n",
+      "661            29.770346         0.000222  deep_blue  \n",
+      "673            24.798221         0.000238  deep_blue  \n",
+      "679            27.125112         0.000734  deep_blue  \n",
+      "680            46.238683         0.000175  deep_blue  \n",
+      "688            19.348324         0.000250  deep_blue  \n",
+      "702            21.116164         0.001493  deep_blue  \n",
+      "707            63.624454         0.000274  deep_blue  \n",
+      "711            49.449926         0.000743  deep_blue  \n",
+      "715            39.176603         0.000245  deep_blue  \n",
+      "785            38.241719         0.000485      cdiac  \n",
+      "888            75.027936         0.000217      cdiac  \n",
+      "1120           30.695806         0.003285      cdiac  \n",
+      "1258           94.500014         0.002260      cdiac  \n",
+      "1301           28.788381         0.000179      cdiac  \n",
+      "1415           37.243771         0.000786      cdiac  \n",
+      "1426          119.123731         0.000213      cdiac  \n",
+      "1480           36.387478         0.000302      cdiac  \n",
+      "1505          104.084191         0.001082      cdiac  \n",
+      "1522          199.003021         0.000195      cdiac  \n",
+      "1557          125.556849         0.000226      cdiac  \n",
+      "1590          107.645170         0.000457      cdiac  \n",
+      "1611          126.927007         0.000250      cdiac  \n",
+      "1670          187.369347         0.000185      cdiac  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(zip_results_df[zip_results_df.estimated_value > 2**32])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "amended-reader",
    "metadata": {},
