Intermediary push to build container

--- a/notebooks/abyss_request_testing.ipynb
+++ b/notebooks/abyss_request_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "fatty-fetish",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "incident-crime",
    "metadata": {},
    "outputs": [
@@ -24,10 +24,10 @@
      "output_type": "stream",
      "text": [
       "Please paste the following URL in a browser:\n",
-      "https://auth.globus.org/v2/oauth2/authorize?client_id=7414f0b4-7d05-4bb6-bb00-076fa3f17cf5&redirect_uri=https%3A%2F%2Fauth.globus.org%2Fv2%2Fweb%2Fauth-code&scope=urn%3Aglobus%3Aauth%3Ascope%3Atransfer.api.globus.org%3Aall+https%3A%2F%2Fauth.globus.org%2Fscopes%2Ffacd7ccc-c5f4-42aa-916b-a0e270e2c2a9%2Fall+email+openid&state=_default&response_type=code&code_challenge=eto9v7rK4Cwr0H2BpQXVP1-q5hQ0m7UVcwMfT55Myf4&code_challenge_method=S256&access_type=online&prefill_named_grant=My+App+Login\n",
+      "https://auth.globus.org/v2/oauth2/authorize?client_id=7414f0b4-7d05-4bb6-bb00-076fa3f17cf5&redirect_uri=https%3A%2F%2Fauth.globus.org%2Fv2%2Fweb%2Fauth-code&scope=urn%3Aglobus%3Aauth%3Ascope%3Atransfer.api.globus.org%3Aall+https%3A%2F%2Fauth.globus.org%2Fscopes%2Ffacd7ccc-c5f4-42aa-916b-a0e270e2c2a9%2Fall+email+openid&state=_default&response_type=code&code_challenge=77PuEbEZvWEG1y-pGMxqtS12OOnA6oATyC595VtHEf0&code_challenge_method=S256&access_type=online&prefill_named_grant=My+App+Login\n",
       "Please Paste your Auth Code Below: \n",
-      "O2ZhX9dswZJx4nV5C9E3rKp1DSc31R\n",
-      "Headers: {'Authorization': 'Bearer AgB1VQNJxqQ3764KXX0rBWJwyQNEa05lJY0xGN1ooNkN74gDoPcyCjB9Elz30pV1xlG5On9jJrxYlMCkqD3pOhMx4j', 'Transfer': 'AgQWYYnwxWNGnlwVvdXJjwWY9xMkaN4Kg9VnX7GWbzNd09kEwWUvC3MYdW591GJObmNMWz6N980j41FMPa5zWTE3MK', 'FuncX': 'AgB1VQNJxqQ3764KXX0rBWJwyQNEa05lJY0xGN1ooNkN74gDoPcyCjB9Elz30pV1xlG5On9jJrxYlMCkqD3pOhMx4j'}\n"
+      "2oqO0LaEOU4bVS49ta6aeZ7hKyNzsi\n",
+      "Headers: {'Authorization': 'Bearer Ag1OxKqaDBJP61zavMnvbnvVn2DPGPdrXdk0ln7E7Prpmv64Y7F2C9QPerYkOoxVO6xQDow4aq6o2JC4qJ7JxHx9v0', 'Transfer': 'AgMpYgW2KV1ymwd6kJl2XVb6e6vE8Mrbq94nm4jj7G7zeaKMBhOCY5862qrppn5jPJX4083abwJ9bCvkedegf0onk', 'FuncX': 'Ag1OxKqaDBJP61zavMnvbnvVn2DPGPdrXdk0ln7E7Prpmv64Y7F2C9QPerYkOoxVO6xQDow4aq6o2JC4qJ7JxHx9v0'}\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "attractive-proportion",
    "metadata": {},
    "outputs": [],
@@ -58,10 +58,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "expanded-congress",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
    "source": [
     "url = f\"{abyss_url}/\"\n",
     "headers = {'Authorization': f\"Bearer {funcx_token}\",'Transfer': transfer_token, 'FuncX': f\"{funcx_token}\"}\n",
@@ -71,10 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "innovative-tuning",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please paste the following URL in a browser:\n",
+      "https://auth.globus.org/v2/oauth2/authorize?client_id=4cf29807-cf21-49ec-9443-ff9a3fb9f81c&redirect_uri=https%3A%2F%2Fauth.globus.org%2Fv2%2Fweb%2Fauth-code&scope=https%3A%2F%2Fauth.globus.org%2Fscopes%2Ffacd7ccc-c5f4-42aa-916b-a0e270e2c2a9%2Fall+urn%3Aglobus%3Aauth%3Ascope%3Asearch.api.globus.org%3Aall+openid&state=_default&response_type=code&code_challenge=s2vhCv9AHSYI9LYD-H3tbY2uP3mFOT7HKwlfQIA48cA&code_challenge_method=S256&access_type=offline&prefill_named_grant=FuncX+SDK+Login\n",
+      "Please Paste your Auth Code Below: \n",
+      "si4aTPzsB0vjfvdhVfWbe6zWg3rJQS\n"
+     ]
+    }
+   ],
    "source": [
     "fxc = funcx.FuncXClient(force_login=True)"
    ]
